; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/meson/extr_ao-cec-g12a.c_meson_ao_cec_g12a_dualdiv_clk_is_enabled.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/meson/extr_ao-cec-g12a.c_meson_ao_cec_g12a_dualdiv_clk_is_enabled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_hw = type { i32 }
%struct.meson_ao_cec_g12a_dualdiv_clk = type { i32 }

@CECB_CLK_CNTL_REG0 = common dso_local global i32 0, align 4
@CECB_CLK_CNTL_INPUT_EN = common dso_local global i32 0, align 4
@CECB_CLK_CNTL_OUTPUT_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.clk_hw*)* @meson_ao_cec_g12a_dualdiv_clk_is_enabled to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @meson_ao_cec_g12a_dualdiv_clk_is_enabled(%struct.clk_hw* %0) #0 {
  %2 = alloca %struct.clk_hw*, align 8
  %3 = alloca %struct.meson_ao_cec_g12a_dualdiv_clk*, align 8
  %4 = alloca i32, align 4
  store %struct.clk_hw* %0, %struct.clk_hw** %2, align 8
  %5 = load %struct.clk_hw*, %struct.clk_hw** %2, align 8
  %6 = call %struct.meson_ao_cec_g12a_dualdiv_clk* @hw_to_meson_ao_cec_g12a_dualdiv_clk(%struct.clk_hw* %5)
  store %struct.meson_ao_cec_g12a_dualdiv_clk* %6, %struct.meson_ao_cec_g12a_dualdiv_clk** %3, align 8
  %7 = load %struct.meson_ao_cec_g12a_dualdiv_clk*, %struct.meson_ao_cec_g12a_dualdiv_clk** %3, align 8
  %8 = getelementptr inbounds %struct.meson_ao_cec_g12a_dualdiv_clk, %struct.meson_ao_cec_g12a_dualdiv_clk* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @CECB_CLK_CNTL_REG0, align 4
  %11 = call i32 @regmap_read(i32 %9, i32 %10, i32* %4)
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* @CECB_CLK_CNTL_INPUT_EN, align 4
  %14 = load i32, i32* @CECB_CLK_CNTL_OUTPUT_EN, align 4
  %15 = or i32 %13, %14
  %16 = and i32 %12, %15
  %17 = icmp ne i32 %16, 0
  %18 = xor i1 %17, true
  %19 = xor i1 %18, true
  %20 = zext i1 %19 to i32
  ret i32 %20
}

declare dso_local %struct.meson_ao_cec_g12a_dualdiv_clk* @hw_to_meson_ao_cec_g12a_dualdiv_clk(%struct.clk_hw*) #1

declare dso_local i32 @regmap_read(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
